# rust-regression-analysis

./: Cargo.toml
src/: data_loader.rs  main.rs  preprocessing.rs  regression_error.rs
src/regression/: linear.rs  mod.rs  multiple_linear.rs  polynomial.rs
