[package]
name = "rust-regression-analysis"
authors = ["TheLionCoder"]
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.11.0"
